# symm_rep_learn

./: .gitignore  .gitmodules  .rsyncignore  CONTRIBUTORS.md  README.md  conformalized_quantile_regression.ipynb  icml_rebuttal_synthetic.ipynb  notes.md  pyproject.toml  requirements.txt  todo
NCP/: cdf.py  layers.py  metrics.py  model.py  utils.py
NCP/cde_fork/: BaseConditionalDensity.py  __init__.py
NCP/cde_fork/density_estimator/: BaseDensityEstimator.py  BaseNNEstimator.py  BaseNNMixtureEstimator.py  CKDE.py  KMN.py  LSCDE.py  MDN.py  NF.py  NKDE.py  __init__.py
NCP/cde_fork/density_simulation/: ArmaJump.py  BaseConditionalDensitySimulation.py  EconDensity.py  GMM.py  JumpDiffusionModel.py  LinearGaussian.py  LinearStudentT.py  SkewNormal.py  __init__.py  symmGMM.py  toy_densities.py
NCP/cde_fork/model_fitting/: ConfigRunner.py  ConfigRunnerLogProb.py  GoodnessOfFit.py  GoodnessOfFitLogProb.py  GoodnessOfFitResults.py  GoodnessOfFitSingleResult.py  divergences.py  plotting.py  sim_eval.py
NCP/cde_fork/utils/: async_executor.py  center_point_select.py  distribution.py  integration.py  io.py  misc.py  optimizers.py
NCP/examples/: CP_student_performance.py  DeepHetero.ipynb  DeepSVD.ipynb  JointDistributions.ipynb  NCP_benchmarks.ipynb  NCP_benchmarks.py  all_econ.py  baseline_benchmarks.py  candes et al.ipynb  cde_baselines.ipynb  covariance.ipynb  eNCP_ablation.py  eNCP_regression.py  heavy_tail.ipynb  heteroscedastic.ipynb  indep_gauss.py  mulitmodal.ipynb  multimodal copy.ipynb  multimodal.ipynb  plotting_results.ipynb  properties.ipynb  real_data.ipynb  real_life.py  set_value.ipynb  switching.ipynb  symm_GMM.py  symmetric_1D.ipynb  symmetric_C2.py  test_ncp_1dd.py
NCP/examples/benchmark_scripts/: CDEtools_benchmarks.py  DDPM_benchmarks.py  KMN_benchmarks.py  LinCDE_benchmarks.py  NCP_benchmarks.py  NFlow_benchmarks.py  baseline_benchmarks.py  plot_results.ipynb
NCP/examples/cfg/: config.yaml  eNCP_ablation.yaml  eNCP_regression.yaml  indep_gauss_config.yaml
NCP/examples/manifold/: manifold_gaussian_vs_nf.ipynb  manifold_multinomial.ipynb  manifold_time.ipynb
NCP/examples/symmGMM/: plot_utils.py
NCP/examples/tools/: configs.yaml  data_gen.py  lincde.R  lincde.py  noisy_ordered_mnist.py  paths.py  plot_utils.py  uci_load.py
NCP/examples/wandb/: latest-run
NCP/experiments/symmGMM/: plot_utils.py  test_ncp_1d (2).py
NCP/models/: density_ratio_fitting.py  e_ncp_operator.py  equiv_ncp.py  inv_density_ratio_fitting.py  ncp.py  ncp_lightning_module.py  p.py
NCP/mysc/: statistics.py  symm_algebra.py  utils.py
NCP/nn/: callbacks.py  ddpm_module.py  diffusion_conditional.py  equiv_layers.py  functional.py  kernel_mixture_network.py  kmn_module.py  layers.py  losses.py  nf_module.py
NCP/pmd_fork/MI_Est_and_CrossModal/: Gaussian_Exp.ipynb  baselines_mi_values_128.npz  baselines_mi_values_cubic_128.npz  baselines_train_objs_values_128.npz  baselines_train_objs_values_cubic_128.npz  ours_mi_values_128.npz  ours_mi_values_cubic_128.npz  ours_train_objs_values_128.npz  ours_train_objs_values_cubic_128.npz
experiments/NCP-GMM-C2/: C2_plots.py  C6_plots.py  summary_plots.py
experiments/eNCP_regression/: summary_plots.py
launcher/: C2plots.sh  C2plots_hp.sh  C3_exp.sh  CoM_altas.sh  CoM_altas_hp.sh  CoM_cassie.sh  CoM_cassie_residual.sh  CoM_residual.sh  CoM_solo.sh  CoM_solo_hp.sh  CoM_solo_test.sh  CoM_trifinger.sh  D5plots.sh  D6plots.sh  GRF_aliengo.sh  GRF_go1.sh  GRF_go12.sh  ICOplots.sh  UK_go1.sh  UK_go1_l.sh  baseline.sh  baseline2D_dim.sh  rotatedMNIST-NCP.sh  scaling_dim.sh
paper/: C2.py  octahedral.py
paper/examples/: __init__.py  icml_rebuttal_synthetic.ipynb  utils.py
paper/examples/conditional_expectation_regression/: conditional_expectation_regression_1D.ipynb  plotting.py
paper/examples/conditional_quantile_regression/: conditional_quantile_regression_quadruped.py.ipynb  conditional_quantile_regression_synthetic.ipynb  plotting.py
paper/experiments/: CoM_regression.py  GRF_regression.py  GRF_uncertainty_regression.py  GRF_uncertainty_regression2.py  evol_operator_dynamics.py  plot_utils.py  rotated_ordered_mnist.py  symm_GMM.py  train_utils.py
paper/experiments/cfg/: CoM_regression.yaml  GRF_regression.yaml  evol_dynamics.yaml  ordered_mnist.yaml  symm_GMM.yaml
paper/experiments/com_momentum/: com_momentum.py  dynamics_recording.py
paper/experiments/dynamics/: dynamics_dataset.py  ordered_mnist.py  thomas_attractor.py
paper/experiments/grf_regression/: proprioceptive_datasets.py
paper/experiments/grf_regression_uc/: proprioceptive_datasets.py
paper/experiments/symmetricGMM/: BaseConditionalDensitySimulation.py  GMM.py  plot_utils.py  symmGMM.py
paper/launcher/: C2plots.sh  C6plots.sh  D6plots.sh
paper/plots/: group_action_fn_space.py
paper/results/NCP-GMM-C2/: summary_plots.py
paper/results/eNCP_regression/: summary_plots.py
symm_rep_learn/: __init__.py
symm_rep_learn/inference/: __init__.py  encp.py  ncp.py
symm_rep_learn/inference/conditional_quantile_regression/: encp.py  ncp.py
symm_rep_learn/models/: __init__.py  density_ratio_fitting.py  encp.py  equiv_ncp.py  evol_op.py  img_evol_op.py  inv_density_ratio_fitting.py  lightning_modules.py  multivariateCQR.py  ncp.py
symm_rep_learn/models/conditional_quantile_regression/: __init__.py  cqr.py  ecqr.py
symm_rep_learn/mysc/: rep_theory_utils.py  statistics.py  symm_algebra.py  utils.py
symm_rep_learn/nn/: __init__.py  equiv_layers.py  layers.py  losses.py
(+168 files in other folders)
