[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symm_rep_learn "
version = "0.1.0"

description = "Code of paper Learning Disentangled Representations for Equivariant Inference"
readme = "README.md"
requires-python = ">=3.6"

authors = [

]
dependencies = [
  "torch",
  "escnn",
]

# RUFF ___________________________________________________________________________________________________________
[tool.ruff]
# Set the maximum allowed line length to 120 characters
line-length = 120

# Enable specific linting rules
select = [
  "F",    # pyflakes: general code quality checks
  "E",    # pycodestyle: PEP8 error checks
  "W",    # pycodestyle: PEP8 warning checks
  "I",    # isort: import sorting checks
  "D"     # pydocstyle: docstring style checks
]

# Ignore specific linting rules
ignore = [
  "D401", # Allow any docstring to start with a capital letter, not just "This"
  "D405", # Allow non-imperative mood in docstring section names
  "E701", # Allow multiple statements on one line (colon)
  "D100"  # Ignore missing docstring in public module
]

# Exclude specific directories from linting
exclude = [
  ".git",  # Git version control directory
  ".idea", # PyCharm project settings directory
  ".venv",  # Virtual environment directory
  ".vscode"
]

[tool.ruff.pydocstyle]
convention = "google"
