[project]
name = "symm-rep-learn"
dynamic = ["version"]

description = "Code of paper Learning Disentangled Representations for Equivariant Inference"
readme = "README.md"
requires-python = ">=3.6"

authors = [

]
dependencies = [
  "torch",
  "symm-learning",
  "plotly",
  "lightning",
  "scipy",
  "wandb",
]

# RUFF ___________________________________________________________________________________________________________
[tool.ruff]
line-length = 120 # Set the maximum allowed line length to 120 characters

[tool.ruff.lint] # _____________________________________________________________________________________________________
# Enable specific linting rules
select = [
  "F",    # pyflakes: general code quality checks
  #  "E",    # pycodestyle: PEP8 error checks
  "W",    # pycodestyle: PEP8 warning checks
  "I",    # isort: import sorting checks
  #  "D"     # pydocstyle: docstring style checks
]

# Ignore specific linting rules
ignore = [
  "F841", # Ignore unused variable warnings
  "D401", # Allow any docstring to start with a capital letter, not just "This"
  "D405", # Allow non-imperative mood in docstring section names
  "E701", # Allow multiple statements on one line (colon)
  "D100"  # Ignore missing docstring in public module
]

# Exclude specific directories from linting
exclude = [
  ".git",  # Git version control directory
  ".idea", # PyCharm project settings directory
  ".venv",  # Virtual environment directory
  ".vscode"
]

pydocstyle.convention = "google"

# ___________________________________________________________________________________________________________
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Pypi build configuration._________________________________________________________________________
[tool.hatch.build] # ===============================================================================
include = [
  "symm_rep_learn/**", # Only include necessary package files
]
exclude = [
  ".github/**", # Exclude GitHub workflows
  ".git/**",
  ".idea/**",
  "paper/**", # Exclude test files
  "launcher/**", # Exclude test files
  "*.log", # Exclude log files
  "*.zip", "*.tar.gz", # Exclude compressed files
  "*.h5", # Exclude large data files
  "*.mat", # Exclude large data files
  "*.pkl", # Exclude pickle files
  "__pycache__/**", # Exclude Python cache files
]

[tool.hatch.build.targets.wheel]
packages = ["symm_rep_learn"]

[tool.hatch.version]
path = "symm_rep_learn/__init__.py"